--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,7 +55,7 @@ body {
   width: 100%;
 }
 
-.container_separation {
+.container_line {
   border-top: 1px solid var(--color-primary);
   border-bottom: 1px solid var(--color-primary);
 }
@@ -66,6 +66,10 @@ body {
 
 .section {
   max-width: 1200px;
+  margin: 0 120px;
+}
+
+.content .section {
   margin: 40px 120px;
 }
 
@@ -76,10 +80,16 @@ body {
   list-style-type: none;
   justify-content: space-around;
   align-items: center;
-  height: 62px;
+  flex-wrap: wrap;
+  height: 63px;
+}
+
+.nav li:not(:last-child) {
+  margin-right: 10px;
 }
 
 .nav__link {
+  text-decoration: none;
   color: var(--color-primary);
   cursor: pointer;
 }
@@ -88,8 +98,57 @@ body {
   color: var(--color-primary-active);
 }
 
+.nav__logo {
+  height: 32px;
+  width: 100px;
+  cursor: pointer;
+}
+
+.nav__logo svg {
+  width: 100%;
+  height: 100%;
+}
+
+.nav_alternative {
+  height: 97px;
+}
+
+.nav_alternative .nav__link {
+  color: var(--color-white);
+  height: 20px;
+}
+
+.nav_alternative .nav__link:hover {
+  color: var(--color-primary-active);
+}
+
+.nav_alternative .nav__logo {
+  height: 32px;
+}
+
 .footer {
   flex: 0 0 auto;
   color: var(--color-white);
-  height: 97px;
+}
+
+.social {
+  display: flex;
+  width: 100px;
+}
+
+.social__link {
+  display: block;
+  cursor: pointer;
+  height: 20px;
+  padding: 5px;
+}
+
+.social__icon {
+  fill: var(--color-white);
+  height: 100%;
+  width: 100%;
+}
+
+.social__icon:hover {
+  fill: var(--color-primary-active);
 }
