--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,8 +26,37 @@
   font-style: italic;
 }
 
+@font-face {
+  font-family: "Playfair Display";
+  src: url("../font/PlayfairDisplay-Regular.ttf") format("ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Playfair Display";
+  src: url("../font/PlayfairDisplay-Italic.ttf") format("ttf");
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Playfair Display";
+  src: url("../font/PlayfairDisplay-Bold.ttf") format("ttf");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Playfair Display";
+  src: url("../font/PlayfairDisplay-BoldItalic.ttf") format("ttf");
+  font-weight: bold;
+  font-style: italic;
+}
+
 :root {
   --font-primary: "Montserrat", sans-serif;
+  --font-secondary: "Playfair Display", serif;
   --color-white: #fff;
   --color-white-active: #cccccc;
   --color-primary: #ae7c78;
@@ -45,6 +74,11 @@ body {
   font-style: normal;
   font-weight: normal;
   min-height: 100vh;
+}
+
+.header {
+  z-index: 1;
+  margin-top: 25px;
 }
 
 .content {
@@ -109,8 +143,62 @@ body {
   height: 100%;
 }
 
+.grid {
+  margin-top: 80px;
+  height: 462px;
+  display: grid;
+  gap: 10px;
+  grid-template-areas: "A B C";
+  grid-template-columns: 384px 1tr 1tr;
+}
+
+.box_1 {
+  grid-area: A;
+}
+
+.box_2 {
+  grid-area: B;
+  align-self: end;
+}
+
+.box_3 {
+  grid-area: C;
+}
+
+.box_2 img {
+  width: 386px;
+  height: 404px;
+}
+
+.box_3 img {
+  width: 386px;
+  height: 420px;
+}
+
 .nav_alternative {
   height: 97px;
+}
+
+.text_top {
+  margin: 0;
+  font-family: var(--font-secondary);
+  font-weight: normal;
+  font-style: normal;
+  color: var(--color-primary);
+  font-size: 44px;
+}
+
+.text_top span {
+  font-weight: normal;
+  font-style: italic;
+}
+
+.subtext_top {
+  margin-top: 24px;
+  font-family: var(--font-primary);
+  font-style: normal;
+  color: var(--color-primary);
+  font-size: 24px;
 }
 
 .nav_alternative .nav__link {
