--- a/src/css/global/grid.scss
+++ b/src/css/global/grid.scss
@@ -1,6 +1,19 @@
+$gap: 10px;
+$columns: 12;
+
 .row {
+  margin: (-$gap * 2) (-$gap) 0;
   display: flex;
   flex-wrap: wrap;
+
+  & + & {
+    margin-top: 0;
+  }
+}
+
+[class|='col'] {
+  margin-top: $gap * 2;
+  padding: 0 $gap;
 }
 
 .col {
@@ -8,66 +21,11 @@
 }
 
 .col-auto {
-  flex: 0 0 auto;
   width: auto;
 }
 
-.col-1 {
-  flex: 0 0 auto;
-  width: 8.33333333%;
-}
-
-.col-2 {
-  flex: 0 0 auto;
-  width: 16.66666667%;
-}
-
-.col-3 {
-  flex: 0 0 auto;
-  width: 25%;
-}
-
-.col-4 {
-  flex: 0 0 auto;
-  width: 33.33333333%;
-}
-
-.col-5 {
-  flex: 0 0 auto;
-  width: 41.66666667%;
-}
-
-.col-6 {
-  flex: 0 0 auto;
-  width: 50%;
-}
-
-.col-7 {
-  flex: 0 0 auto;
-  width: 58.33333333%;
-}
-
-.col-8 {
-  flex: 0 0 auto;
-  width: 66.66666667%;
-}
-
-.col-9 {
-  flex: 0 0 auto;
-  width: 75%;
-}
-
-.col-10 {
-  flex: 0 0 auto;
-  width: 83.33333333%;
-}
-
-.col-11 {
-  flex: 0 0 auto;
-  width: 91.66666667%;
-}
-
-.col-12 {
-  flex: 0 0 auto;
-  width: 100%;
+@for $i from 1 through $columns {
+  .col-#{$i} {
+    width: 100% / $columns * $i;
+  }
 }
