Refactor variables.scss, add button.scss

--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -1,8 +1,8 @@
 .footer {
   flex: 0 0 auto;
-  color: var(--color-white);
+  color: $color-white;
 
   &_bg {
-    background-color: var(--color-primary);
+    background-color: $color-primary;
   }
 }
