--- a/src/blocks/subtitle/subtitle.scss
+++ b/src/blocks/subtitle/subtitle.scss
@@ -1,7 +1,7 @@
 .subtext_top {
   margin-top: 24px;
-  font-family: var(--font-primary);
+  font-family: $font-primary;
   font-style: normal;
-  color: var(--color-primary);
+  color: $color-primary;
   font-size: 24px;
 }
