--- a/src/global/index.scss
+++ b/src/global/index.scss
@@ -1,5 +1,6 @@
 @import "variables";
-@import "../blocks/root";
+@import "section";
 @import "font";
 @import "common";
 @import "grid";
+@import "../blocks/root";
