--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -1,11 +1,12 @@
-:root {
-  --font-primary: "Montserrat", sans-serif;
-  --font-secondary: "Playfair Display", serif;
-  --color-white: #fff;
-  --color-white-active: #cccccc;
-  --color-primary: #ae7c78;
-  --color-primary-active: #7a5754;
-}
+$font-primary: "Montserrat", sans-serif;
+$font-secondary: "Playfair Display", serif;
+$color-white: #fff;
+$color-white-active: #cccccc;
+$color-primary: #ae7c78;
+$color-primary-active: #7a5754;
+$color-second: #d89999;
+$color-second-hover: darken($color-second, 15%);
+$color-second-active: darken($color-second, 30%);
 
 $point-sm: 576px;
 $point-md: 768px;
@@ -13,7 +14,7 @@ $point-lg: 992px;
 $point-xl: 1200px;
 
 %transition {
-  transition: 0.3s ease;
+  transition: 0.2s ease;
 }
 
 @mixin screen-up($point) {
