--- a/src/blocks/root.scss
+++ b/src/blocks/root.scss
@@ -1,9 +1,5 @@
 .root {
-  &__content {
-    flex: 1 0 auto;
-  }
-
-  &_text-center {
-    text-align: center;
+  &__row-no-wrap {
+    flex-wrap: nowrap;
   }
 }
