--- a/src/blocks/social/social.scss
+++ b/src/blocks/social/social.scss
@@ -10,12 +10,12 @@
   }
 
   &__icon {
-    fill: var(--color-white);
+    fill: $color-white;
     height: 100%;
     width: 100%;
 
     &:hover {
-      fill: var(--color-primary-active);
+      fill: $color-primary-active;
     }
   }
 }
