--- a/src/global/common.scss
+++ b/src/global/common.scss
@@ -3,7 +3,7 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
-  font-family: var(--font-primary);
+  font-family: $font-primary;
   line-height: 1.5;
   font-size: 16px;
   height: 100%;
