--- a/src/global/grid.scss
+++ b/src/global/grid.scss
@@ -1,5 +1,4 @@
-$gap-sm: 12px;
-$gap-md: 12px;
+$gap: 8px;
 $columns: 12;
 
 .container {
@@ -25,12 +24,12 @@ $columns: 12;
 .container,
 .container-fluid {
     width: 100%;
-    padding: 0 $gap-md;
+    padding: 0 $gap;
     position: relative;
 }
 
 .row {
-    margin: (-$gap-md * 2) (-$gap-md) 0;
+    margin: (-$gap * 2) (-$gap) 0;
     display: flex;
     flex-wrap: wrap;
 
@@ -41,8 +40,8 @@ $columns: 12;
 
 [class|='col'] {
     width: 100%;
-    margin-top: $gap-md * 2;
-    padding: 0 $gap-md;
+    margin-top: $gap * 2;
+    padding: 0 $gap;
 }
 
 .col {
