--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 
 // ** blocks **
 @import "blocks/title/title";
+@import "blocks/section-first/section-first";
 @import "blocks/subtitle/subtitle";
 @import "blocks/social/social";
 @import "blocks/nav/nav";
