--- a/src/global/index.scss
+++ b/src/global/index.scss
@@ -1,6 +1,4 @@
-@import "variables";
-@import "section";
-@import "font";
-@import "common";
-@import "grid";
-@import "../blocks/root";
+@import "variables"; /*Перемменные*/
+@import "font"; /*Шрифты*/
+@import "common"; /*Общие*/
+@import "grid"; /*Сетка*/
