--- a/src/blocks/subtitle/subtitle.scss
+++ b/src/blocks/subtitle/subtitle.scss
@@ -1,6 +1,9 @@
 .subtitle {
-  font-family: $font-primary;
-  font-style: normal;
-  color: $color-primary;
-  font-size: 24px;
+  margin: 0;
+  font-size: 16px;
+  font-weight: normal;
+
+  &_size_md {
+    font-size: 24px;
+  }
 }
