--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -1,5 +1,6 @@
 $font-primary: "Montserrat", sans-serif;
 $font-secondary: "Playfair Display", serif;
+$color-block-text: #4d4d4d;
 $color-white: #fff;
 $color-white-active: #cccccc;
 $color-primary: #ae7c78;
