--- a/src/blocks/block.scss
+++ b/src/blocks/block.scss
@@ -7,6 +7,7 @@
         font-size: 27px;
         line-height: 1.3;
         padding: 12px 16px;
+        color: $color-block-text;
         background-color: $color-white-active;
         border-bottom: 1px solid $color-white;
     }
