--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,7 @@
 @import "blocks/title/title";
 @import "blocks/logo";
 @import "blocks/icon/icon";
+@import "blocks/social/social";
 @import "blocks/link";
 @import "blocks/subtitle/subtitle";
 @import "blocks/section-first/section-first";
