Deleted more styles and added bold in subtitle.scss

--- a/src/blocks/subtitle/subtitle.scss
+++ b/src/blocks/subtitle/subtitle.scss
@@ -3,7 +3,11 @@
   font-size: 16px;
   font-weight: normal;
 
-  &_size_md {
+  &_size_lg {
     font-size: 24px;
+  }
+
+  &_bold {
+    font-weight: 600;
   }
 }
