--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,7 @@
 @import "blocks/logo";
 @import "blocks/icon/icon";
 @import "blocks/social/social";
+@import "blocks/promo-info/promo-info";
 @import "blocks/link";
 @import "blocks/subtitle/subtitle";
 @import "blocks/nav/nav";
