--- a/src/global/common.scss
+++ b/src/global/common.scss
@@ -1,16 +1,18 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
   font-family: $font-primary;
   color: $color-primary;
-  line-height: 1.5;
   font-size: 16px;
-  height: 100%;
-  font-style: normal;
-  font-weight: normal;
-  min-height: 100vh;
+  line-height: 1.5;
 }
 
 .content {
