--- a/src/global/common.scss
+++ b/src/global/common.scss
@@ -9,10 +9,13 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: $font-primary;
   color: $color-primary;
   font-size: 16px;
   line-height: 1.5;
+  min-height: 100vh;
 }
 
 .content {
