Added fixes styles in promo-info, section-first and index.html

--- a/src/blocks/section-first/section-first.scss
+++ b/src/blocks/section-first/section-first.scss
@@ -24,6 +24,10 @@
   &__wrap {
     position: relative;
     padding-bottom: 100%;
+
+    &_margin-top {
+      margin-top: 40px;
+    }
   }
 
   &__picture {
