--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,7 @@
 @import "blocks/nav/nav";
 @import "blocks/header/header";
 @import "blocks/footer/footer";
+@import "blocks/popular/popular";
 @import "blocks/button";
 @import "blocks/root";
 @import "blocks/block";
