--- a/src/blocks/popular/popular.scss
+++ b/src/blocks/popular/popular.scss
@@ -19,17 +19,8 @@
     margin-top: 64px;
   }
 
-  &__wrap {
-    position: relative;
+  &__img {
     padding-bottom: 100%;
-  }
-
-  &__picture {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: no-repeat top / cover;
+    background: no-repeat center / contain;
   }
 }
