--- a/src/blocks/social/social.scss
+++ b/src/blocks/social/social.scss
@@ -13,10 +13,15 @@ $color-inst-active: darken($color-inst, 10%);
 
     &__link {
         @extend %transition;
-        padding: 6px;
-        width: 20px;
-        height: 20px;
+        padding: 2px;
+        margin-right: 8px;
+        width: 24px;
+        height: 24px;
         fill: $color-white;
+
+        &:last-child {
+            margin-right: 0;
+        }
 
         &:hover {
             fill: $color-primary;
