--- a/src/blocks/nav/nav.scss
+++ b/src/blocks/nav/nav.scss
@@ -4,19 +4,13 @@
   display: flex;
   list-style-type: none;
   justify-content: space-around;
+  align-items: center;
   position: relative;
   flex-wrap: wrap;
-
-  li {
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-
-  li:not(:last-child) {
-    margin-right: 10px;
-  }
+  height: 60px;
 
   &__link {
+    padding:20px 10px;
     text-decoration: none;
     color: $color-primary;
     cursor: pointer;
@@ -33,18 +27,13 @@
     cursor: pointer;
   }
 
-  &__svg {
-    width: 100%;
-    height: 100%;
-  }
-
   &_alternative {
     .nav__link {
       color: $color-white;
       height: 100%;
     }
     .nav__link:hover {
-      color: $color-primary-active;
+      color: $color-white-active;
     }
   }
 }
