Fix styles logo

--- a/src/blocks/block.scss
+++ b/src/blocks/block.scss
@@ -32,7 +32,7 @@
         }
 
         &_dark {
-            background-color: $color-white-active;
+            background-color: #000;
             border-color: transparent;
 
             &:only-child {
