Add catalog block

--- a/src/style.scss
+++ b/src/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/link";
 @import "blocks/subtitle/subtitle";
 @import "blocks/nav/nav";
+@import "blocks/catalog/catalog";
 @import "blocks/header/header";
 @import "blocks/footer/footer";
 @import "blocks/popular/popular";
