Add block steps and new icon

--- a/src/blocks/title/title.scss
+++ b/src/blocks/title/title.scss
@@ -9,6 +9,10 @@
     text-transform: uppercase;
   }
 
+  &_bold {
+    font-weight: bold;
+  }
+
   &_size_lg {
     font-size: 44px;
     font-weight: 400;
