--- a/src/style.scss
+++ b/src/style.scss
@@ -4,12 +4,13 @@
 // ** blocks **
 @import "blocks/text";
 @import "blocks/title/title";
+@import "blocks/subtitle/subtitle";
 @import "blocks/logo";
 @import "blocks/icon/icon";
 @import "blocks/social/social";
 @import "blocks/promo-info/promo-info";
+@import "blocks/step/step";
 @import "blocks/link";
-@import "blocks/subtitle/subtitle";
 @import "blocks/nav/nav";
 @import "blocks/discount/discount";
 @import "blocks/catalog/catalog";
