--- a/src/style.scss
+++ b/src/style.scss
@@ -7,7 +7,6 @@
 @import "blocks/subtitle/subtitle";
 @import "blocks/logo";
 @import "blocks/icon/icon";
-@import "blocks/social/social";
 @import "blocks/promo-info/promo-info";
 @import "blocks/step/step";
 @import "blocks/link";
@@ -17,7 +16,9 @@
 @import "blocks/header/header";
 @import "blocks/footer/footer";
 @import "blocks/popular/popular";
+@import "blocks/news/news";
 @import "blocks/button";
+@import "blocks/social/social";
 @import "blocks/root";
 @import "blocks/block";
 @import "blocks/section";
