Add fix styles and index.html

--- a/src/blocks/discount/discount.scss
+++ b/src/blocks/discount/discount.scss
@@ -1,19 +1,20 @@
 .discount {
-  display: flex;
+  width: 100%;
+  display: grid;
+  grid-template-columns:  1fr 1fr;
   background-color: $color-primary;
 
-  &__row-center {
-    justify-content: center;
-  }
-
   &__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding: 40px 102px;
     color: $color-white;
   }
 
   &__title {
     padding-bottom: 24px;
+  }
+
+  &__img {
+    background-clip: border-box;
+    background: no-repeat center / cover;
   }
 }
