--- a/src/style.scss
+++ b/src/style.scss
@@ -17,6 +17,7 @@
 @import "blocks/footer/footer";
 @import "blocks/popular/popular";
 @import "blocks/news/news";
+@import "blocks/feedback/feedback";
 @import "blocks/button";
 @import "blocks/social/social";
 @import "blocks/root";
