--- a/src/blocks/section.scss
+++ b/src/blocks/section.scss
@@ -1,4 +1,8 @@
 .section {
   padding: 40px 0;
   background: no-repeat center / cover;
+
+  &_padding-bottom-none {
+    padding-bottom: 0;
+  }
 }
