--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -3,6 +3,7 @@ $font-secondary: "Playfair Display", serif;
 $color-block-text: #4d4d4d;
 $color-white: #fff;
 $color-white-active: #cccccc;
+$color-bg-contact: #F7FAFC;
 $color-primary: #ae7c78;
 $color-primary-hover: darken($color-primary, 10%);
 $color-primary-active: #7a5754;
