--- a/src/style.scss
+++ b/src/style.scss
@@ -20,6 +20,7 @@
 @import "blocks/feedback/feedback";
 @import "blocks/button";
 @import "blocks/social/social";
+@import "blocks/contacts/contacts";
 @import "blocks/root";
 @import "blocks/block";
 @import "blocks/section";
